# RPi_WS_EPD

./: .gitignore  CMakeLists.txt  EPD.service  README.md
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
lib/Fonts/: font20.c  fonts.h
lib/GUI/: GUI_BMPfile.c  GUI_Paint.c  GUI_Paint.h
lib/e-Paper/: EPD_1in54_V2.c  EPD_1in54_V2.h
src/: EPD_1in54_V2_test.c  EPD_1in54_V2_test.h  ImageData.h  i2c_utils.c  main.c  utils.c  utils.h
